# 40kdc-data

./: .gitignore  11e-migration.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-DATA  LICENSE-TOOLS  PRODUCT.md  README.md  VERSIONING.md  package-lock.json  package.json  todo.md
.claude/: settings.json
.github/workflows/: deploy.yml  pages.yml  parity.yml  validate.yml
conformance/: RUNNER_PROTOCOL.md  normalize.json
conformance/abilities-resolver/: 01-intercessor-squad-shooting.json  02-kharn-fight.json  defensive-from-dsl.json  from-dsl.json
conformance/attribution/: cases.json
conformance/cruncher/: 01-bolter-vs-intercessor.json  02-lascannon-vs-knight.json  03-chainsword-vs-cultist.json  04-multi-melta-half-range-stationary-vs-knight.json  05-anti-infantry-vs-cultist.json  06-sustained-hits-chainsword-vs-cultist.json  07-twin-linked-heavy-stationary-vs-knight.json  08-damage-reduction-lascannon-vs-knight.json  09-ability-invuln-cultists-vs-lascannon.json  10-fnp-vs-mortal-devastating-lascannon-vs-cultists.json  11-cover-hit-penalty-ectoplasma-vs-cultist.json  12-cover-hit-penalty-bolter-vs-cultist.json  13-range-gate-within-18-reroll-applies.json  14-range-gate-beyond-18-reroll-dropped.json
conformance/effect-translation/: cases.json
conformance/linked-api/: cases.json
conformance/scoring/: cases.json
conformance/scoring-translation/: cases.json
conformance/share/: cases.json
conformance/terrain-keystones/: cases.json
conformance/terrain-resolver/: cases.json
conformance/validator/: cases.json
crates/wh40kdc/: Cargo.toml  README.md
crates/wh40kdc/schemas/: bundled.schema.json
crates/wh40kdc/src/: generated.rs  lib.rs  terrain.rs  validator.rs
crates/wh40kdc/src/cruncher/: attribution.rs  buffs.rs  engine.rs  from_keyword.rs  mod.rs
crates/wh40kdc/src/data/: dataset.rs  loadout.rs  mod.rs
crates/wh40kdc/src/export/: helpers.rs  mod.rs  newrecruit_json.rs  newrecruit_simple.rs  newrecruit_wtc.rs  roster_json.rs  rosterizer.rs
crates/wh40kdc/src/import/: adapter.rs  gw.rs  gw_headerless.rs  listforge.rs  listforge_text.rs  mod.rs  newrecruit_json.rs  newrecruit_simple.rs  newrecruit_text.rs  newrecruit_wtc.rs  resolve.rs  roster_json.rs  rosterizer.rs  types.rs
crates/wh40kdc/src/scoring/: mod.rs
crates/wh40kdc/src/share/: mod.rs  registry.generated.json
crates/wh40kdc/src/translate/: effect.rs  mod.rs
crates/wh40kdc/tests/: attribution_conformance.rs  conformance.rs  cruncher_conformance.rs  data_api.rs  deserialize_real_data.rs  import.rs  linked_api_conformance.rs  rosterizer.rs  runner_cli.rs  scoring_conformance.rs  share_conformance.rs  terrain_keystones_conformance.rs  terrain_resolver_conformance.rs  try_import_roster.rs  validator_conformance.rs
data/_audit/: coverage.json  phrasing.csv  phrasing.json  summary.md  worklist.md
data/_port-audit/: adepta-sororitas.json  adeptus-astartes.json  adeptus-custodes.json  adeptus-mechanicus.json  aeldari.json  agents-of-the-imperium.json  astra-militarum.json  black-templars.json  blood-angels.json  (+27 more)
docs-site/: index.html  wrangler.jsonc
go/: .gitignore  abilities_resolver.go  base.go  bundle.go  collection.go  compare.go  conformance_test.go  cruncher_attribution.go  cruncher_buffs.go  cruncher_dataset_buffs.go  cruncher_engine.go  cruncher_from_dsl.go  cruncher_from_keyword.go  dataset.go  entities.go  export.go  export_serializers.go  go.mod  handlers_compare.go  handlers_crunch.go  handlers_data.go  handlers_roster.go  handlers_scoring.go  handlers_share.go  handlers_terrain.go  handlers_translate.go  handlers_validate.go  import_adapters_json.go  import_battlescribe.go  import_decode.go  import_gw.go  import_listforge_text.go  import_resolve.go  import_roster.go  import_rosterizer.go  import_simple.go  import_text_helpers.go  import_wtc.go  jsonutil.go  loadout.go  (+15 more)
python/: README.md  compare.py  pyproject.toml
python/codegen/: gen_typeddicts.py  sync_bundle.py  sync_spec.py
python/src/wh40kdc/: __init__.py  _spec.py  _types.py  _version.py  abilities_resolver.py  runner.py  share.py  validator.py
python/src/wh40kdc/cruncher/: __init__.py  attribution.py  buffs.py  engine.py  from_dsl.py  from_keyword.py
python/src/wh40kdc/data/: __init__.py  base.py  bundle.py  collection.py  dataset.py  entities.py  loadout.py  normalize.py
python/src/wh40kdc/export/: __init__.py  helpers.py  newrecruit_json.py  newrecruit_simple.py  newrecruit_wtc.py  roster_json.py  rosterizer.py
python/src/wh40kdc/imports/: __init__.py  adapter.py  battlescribe.py  decode.py  gw.py  listforge.py  listforge_text.py  newrecruit_json.py  newrecruit_simple.py  newrecruit_text.py  newrecruit_wtc.py  resolve.py  rosterizer.py
python/src/wh40kdc/schemas/$defs/: common.schema.json
python/src/wh40kdc/schemas/core/: deployment-pattern.schema.json  enhancement.schema.json  game-version.schema.json  hull-shape.schema.json  mission.schema.json  roster.schema.json  stratagem.schema.json  unit-composition.schema.json  wargear-option.schema.json  wargear.schema.json  weapon-keyword.schema.json  weapon.schema.json
python/src/wh40kdc/schemas/enrichment/: resource-pool.schema.json  timing-flag.schema.json
python/src/wh40kdc/schemas/enrichment/ability-dsl/: ability.schema.json  condition.schema.json  effect.schema.json  scope.schema.json
python/src/wh40kdc/scoring/: __init__.py
python/src/wh40kdc/terrain/: __init__.py  keystones.py  resolve.py
python/src/wh40kdc/translate/: __init__.py  condition.py  effect.py  scoring.py
python/tests/: conftest.py  test_runner.py
python/tests/conformance/: test_abilities_resolver.py  test_attribution.py  test_cruncher.py  test_effect_translation.py  test_linked_api.py  test_normalize.py  test_roster_export.py  test_roster_import.py  test_scoring.py  test_scoring_translation.py  test_share.py  test_terrain.py  test_validator.py  test_weapon_keywords.py
python/tests/imports/: test_listforge_text.py  test_newrecruit_simple.py
tools/: README.md  extract-terrain-layouts.py  package-lock.json  package.json  typedoc.html.json  typedoc.json
(+884 files in other folders)
